# rust-webapp-crud

./: .env  Cargo.toml  README.md  Rocket.toml  switch-to-nightly.sh
migrations/2020-03-29-091016_create_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: users.rs
src/dto/: user.rs
src/models/: user.rs
