[package]
name = "rocket-web-app"
version = "0.1.0"
authors = ["Sethuraman <sethu10121994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.0.0", features = ["chrono"] }
dotenv = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_mysql_pool", "json"]